apps/archive/podinfo/podinfo-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo-ingressroute
  namespace: podinfo
  annotations:
    gethomepage.dev/href: "https://podinfo.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Podinfo"
    gethomepage.dev/description: "Kubernetes demo app for testing ingress, service discovery, and observability"
    gethomepage.dev/app: podinfo
    gethomepage.dev/group: "Tools"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/kubernetes.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`podinfo.lab.mainertoo.com`)
      kind: Rule
      services:
        - name: podinfo
          port: 9898
          scheme: http
  tls: {}
